--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -1082,14 +1082,14 @@ mk:
             tracker title: "Божиќен локатор на приказни"
             twitter text: "Гледај како светот чита за Исусовото раѓање. Сподели го Божиќниот локатор на приказни @YouVersion: https://www.bible.com/christmas"
             facebook text: "Сподели го Божиќниот локатор на приказни додека луѓето во светот читаат за Исусовото раѓање.  Во црква или дома, во присуство на луѓе кои ги сакаме или за време на нашите тивки моменти, паузираме да се потсетиме на чудесната Божја љубов кон нас."
-            verse: "<sup>10</sup> Но ангелот им рече,<br>“Не плашете се. Ви носам радосна вест, што ќе ги зарадува сите народи. <sup>11</sup> Денес, во Давидовиот град, во Витлеем, ви се роди Спасителот - Месијата, Господ.”"
+            verse: "<sup>10</sup> А ангелот им рече:<br>„Не плашете се! Еве, ви навестувам голема радост, која ќе биде за сите луѓе; <sup>11</sup> зашто денеска ви се роди во градот Давидов Спасител, Кој е Христос Господ;“"
             read more: "Read the amazing story of Christmas"
             read about: "Приказна за раѓањето на Исус"
             totals since: "YouVersion вкупно од 1 декември 2014:"
             total installs: "Вкупно инсталирани на телефони и таблети"
-            download: "Преземи ја бесплатно Апликацијата Библија"
+            download: "Преземи ја бесплатната Апликација „Библија“"
             versions: "Преку %{version_count} верзии на %{language_count} јазици"
-            tagline: "Библија која е постојано со тебе."
+            tagline: "Библија која е постојано со тебе"
             chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: апликација „Библија“"
