--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -1082,9 +1082,9 @@ mn:
             tracker title: "Христмасын Түүхийг Дагагч"
             twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Христмасын тухай гайхалтай түүхийг унши"
-            read about: "Есүсийг хэрхэн төрсөн тухай унши"
+            verse: "<sup>10 Тэнгэр элч тэдэнд,<br>“ Бүү айгтун.</sup>Би бүх ард түмнийг үлэмж баярлуулах сайн мэдээг та нарт авчирлаа. <sup>11 Өнөөдөр Давидын хотод Аврагч, Эзэн Христ та нарын төлөө мэндэллээ.”</sup>"
+            read more: "Христмасын тухай гайхалтай түүхийг унших"
+            read about: "Есүсийг хэрхэн төрсөн тухай унших"
             totals since: "2014, Арван хоёрдугаар сарын 1нээс хойш YouVersion-д нийт:"
             total installs: "Ухаалаг утас болон зөөврийн хэрэгслэлүүд дээр нийт татагдсан"
             download: "Үнэгүй Библи Аппыг татаж авах"
