--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1083,10 +1083,12 @@ en:
       tracker title:                            "Christmas Story Tracker"
       twitter text:                             "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
       facebook text:                            "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+      summary:                                  "During December 2014, this is what it looked like to see the world read about the birth of Jesus."
       verse:                                    "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
       read more:                                "Read the amazing story of Christmas"
       read about:                               "Reading about the birth of Jesus"
       totals since:                             "YouVersion totals since December 1, 2014:"
+      totals during:                            "YouVersion totals during December 2014:"
       total installs:                           "Total installs on smartphones and tablets"
       download:                                 "Download the free Bible App"
       versions:                                 "Over %{version_count} versions in %{language_count} languages"
